// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <ProceduresDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "procedurePanel": false,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={true}
      name="procedurePanel"
      title="Procedure"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Procedure Name
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date of Procedure
                  </label>
                  <div
                    className="form-control-static"
                  >
                    25-Nov-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Procedure Performed By
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Procedure Notes
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Author
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    03-Oct-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <ProceduresDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "procedurePanel": false,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="metaPanel"
      title="Metadata"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Terminology
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Code
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <ProceduresDetail /> should renders correctly with different state of props 3`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "procedurePanel": true,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={true}
      name="procedurePanel"
      title="Edit Procedure"
    >
      <ReduxForm
        detail={
          Object {
            "author": "bob.smith@gmail.com",
            "currentStatus": "completed",
            "date": 1510579904000,
            "dateSubmitted": 1510659104000,
            "name": "123b",
            "notes": "123b",
            "originalComposition": "",
            "originalSource": "",
            "performer": "Performer",
            "procedureCode": "at0039",
            "procedureName": "123b",
            "procedureTerminology": "SNOMED-CT",
            "source": "ethercis",
            "sourceId": "08102813-e8d0-4f45-aa95-ac0d633e69fd",
            "time": 48704000,
          }
        }
      />
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <ProceduresDetail /> should renders with props correctly 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "procedurePanel": false,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={true}
      name="procedurePanel"
      title="Procedure"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Procedure Name
                  </label>
                  <div
                    className="form-control-static"
                  >
                    123b
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date of Procedure
                  </label>
                  <div
                    className="form-control-static"
                  >
                    13-Nov-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Procedure Performed By
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Performer
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Procedure Notes
                  </label>
                  <div
                    className="form-control-static"
                  >
                    123b
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Author
                  </label>
                  <div
                    className="form-control-static"
                  >
                    bob.smith@gmail.com
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    14-Nov-2017
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  >
                    ethercis
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
    <PluginDetailPanel
      editedPanel={
        Object {
          "procedurePanel": false,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={false}
      name="metaPanel"
      title="Metadata"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Terminology
                  </label>
                  <div
                    className="form-control-static"
                  >
                    SNOMED-CT
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Code
                  </label>
                  <div
                    className="form-control-static"
                  >
                    at0039
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;
